# SimpleGo

./: .gitignore  404.html  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  architecture.html  contributing.html  getting-started.html  hardware.html  index.html  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.open  sdkconfig.defaults.vault  search-index-docs-default-current.json  security.html  sitemap.xml  smp-in-c.html  why-simplego.html
ADDING_NEW_DEVICE/: index.html
ARCHITECTURE/: index.html
ARCHITECTURE_AND_SECURITY/: index.html
BUGS/: index.html
BUILD_SYSTEM/: index.html
CRYPTO/: index.html
DEVELOPMENT/: index.html
DEVNOTES/: index.html
PROTOCOL/: index.html
SECURITY_MODEL/: index.html
SIMPLEGO_VS_GRAPHENEOS/: index.html
SIMPLEX_VS_MATRIX/: index.html
TECHNICAL/: index.html
WIRE_FORMAT/: index.html
architecture/: crypto-state.html  encryption-layers.html  index.html  memory-layout.html  system-overview.html  wifi-manager.html
components/sntrup761/: CMakeLists.txt  COMPLETION_REPORT.md  pq_crypto_task.c  sntrup761.c
components/sntrup761/include/: pq_crypto_task.h  sntrup761.h  sntrup761_test.h
components/sntrup761/platform/: randombytes.h  randombytes_esp32.c  sha2.h  sha2_esp32.c
components/sntrup761/test/: test_sntrup761.c
components/wolfssl_config/: CMakeLists.txt
components/wolfssl_config/include/: user_settings.h
components/zstd/: CMakeLists.txt  zstd.c
contributing/: build.html  coding-standards.html  index.html  license.html  project-structure.html
docs/: ADDING_NEW_DEVICE.md  ARCHITECTURE.md  ARCHITECTURE_AND_SECURITY.md  BUGS.md  BUILD_SYSTEM.md  CRYPTO.md  DEVELOPMENT.md  DEVNOTES.md  DISCLAIMER.md  LEGAL.md  PROTOCOL.md  SECURITY_MODEL.md  SIMPLEGO_VS_GRAPHENEOS.md  SIMPLEX_VS_MATRIX.md  SPONSORS.md  TECHNICAL.md  TRADEMARK.md  WIRE_FORMAT.md  architecture-index.md  constants.md  getting-started.md  hardware-index.md  intro.md  protocol-analysis-index.md  security-index.md  smp-in-c-index.md
gfx/: README.md  (+1 more)
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  lv_conf.h  main.c
main/core/: smp_frame_pool.c  smp_tasks.c
main/crypto/: simplex_crypto.c  smp_crypto.c  smp_x448.c
main/hal/: hal_audio.h  hal_common.h  hal_display.h  hal_input.h  hal_network.h  hal_storage.h  hal_system.h
main/include/: reply_queue.h  simplex_crypto.h  smp_ack.h  smp_agent.h  smp_contacts.h  smp_crypto.h  smp_e2e.h  smp_events.h  smp_frame_pool.h  smp_handshake.h  smp_history.h  smp_network.h  smp_parser.h  smp_peer.h  smp_queue.h  smp_ratchet.h  smp_rotation.h  smp_servers.h  smp_storage.h  smp_tasks.h  smp_types.h  smp_utils.h  smp_wifi.h  smp_x448.h  wifi_manager.h
main/net/: smp_network.c  smp_wifi.c  wifi_manager.c
main/protocol/: reply_queue.c  smp_ack.c  smp_agent.c  smp_e2e.c  smp_handshake.c  smp_parser.c  smp_queue.c  smp_ratchet.c
main/state/: smp_contacts.c  smp_globals.c  smp_history.c  smp_peer.c  smp_rotation.c  smp_servers.c  smp_storage.c
main/ui/: ui_manager.c  ui_manager.h  ui_screensaver.c  ui_screensaver.h  ui_statusbar.c  ui_statusbar.h  ui_theme.c  ui_theme.h
main/ui/fonts/: simplego_fonts.h  simplego_umlauts_10.c  simplego_umlauts_12.c  simplego_umlauts_14.c
main/ui/screens/: ui_chat.c  ui_chat.h  ui_chat_bubble.c  ui_chat_bubble.h  ui_connect.c  ui_connect.h  ui_contacts.c  ui_contacts.c.old  ui_contacts.h  ui_contacts_popup.c  ui_contacts_popup.h  ui_contacts_row.c  ui_contacts_row.h  ui_developer.c  ui_developer.h  ui_lock.c  ui_lock.h  ui_main.c  ui_main.c.old  ui_main.h  ui_name_setup.c  ui_name_setup.h  ui_settings.c  ui_settings.h  ui_settings_bright.c  ui_settings_info.c  ui_settings_internal.h  ui_settings_wifi.c  ui_splash.c  ui_splash.h
main/util/: smp_utils.c
(+957 files in other folders)
